trying height=100% for background image to avoid cutoff.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -153,7 +153,7 @@ aside {
 
 header {
     position: relative;
-    width: 100%;
+    height: 100%;
     min-height: auto;
     @include background-cover;
     background-position: center;
